--- a/contracts/membership/Cargo.toml
+++ b/contracts/membership/Cargo.toml
@@ -16,3 +16,5 @@ cw-storage-plus = "1.0.1"
 schemars = "0.8.11"
 cosmwasm-schema = "1.1.9"
 thiserror = "1.0.38"
+proxy = { version = "0.1.0", path = "../proxy", features = ["library"] }
+cw-utils = "1.0.1"
