--- a/contracts/proxy/Cargo.toml
+++ b/contracts/proxy/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 library = []
+mt = ["library", "cw-multi-test", "anyhow"]
 
 [dependencies]
 cosmwasm-std = "1.1.9"
@@ -17,3 +18,9 @@ schemars = "0.8.11"
 cosmwasm-schema = "1.1.9"
 thiserror = "1.0.38"
 cw-utils = "1.0.1"
+cw-multi-test = { version = "0.16.2", optional = true }
+anyhow = { version = "1.0.70", optional = true }
+
+[dev-dependencies]
+anyhow = "1.0.70"
+cw-multi-test = "0.16.2"
