--- a/contracts/distribution/Cargo.toml
+++ b/contracts/distribution/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "common"
+name = "distribution"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common = { version = "0.1.0", path = "../../common" }
 cosmwasm-schema = "1.2.3"
 cosmwasm-std = "1.2.3"
 cw-storage-plus = "1.0.1"
+thiserror = "1.0.40"
