--- a/contracts/distribution/Cargo.toml
+++ b/contracts/distribution/Cargo.toml
@@ -5,9 +5,20 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+library = []
+mt = ["library", "cw-multi-test", "anyhow"]
+
 [dependencies]
 common = { version = "0.1.0", path = "../../common" }
 cosmwasm-schema = "1.2.3"
 cosmwasm-std = "1.2.3"
 cw-storage-plus = "1.0.1"
 thiserror = "1.0.40"
+anyhow = { version = "1.0.70", optional = true }
+cw-multi-test = { version = "0.16.2", optional = true }
+
+[dev-dependencies]
+cw-multi-test = "0.16.2"
+anyhow = "1.0.70"
+
