--- a/contracts/membership/Cargo.toml
+++ b/contracts/membership/Cargo.toml
@@ -22,8 +22,10 @@ anyhow = { version = "1.0.70", optional = true }
 cw-multi-test = { version = "0.16.2", optional = true }
 cw-utils = "1.0.1"
 common = { version = "0.1.0", path = "../../common" }
+distribution = { version = "0.1.0", path = "../distribution", features = ["library"] }
 
 [dev-dependencies]
 anyhow = "1.0.70"
 cw-multi-test = "0.16.2"
 proxy = { path = "../proxy", features = ["mt"] }
+distribution = { version = "0.1.0", path = "../distribution", features = ["mt"] }
